RESOLVED FIXED300914
[WebGPU Swift] 3 text failures running layout tests
https://bugs.webkit.org/show_bug.cgi?id=300914
Summary [WebGPU Swift] 3 text failures running layout tests
Mike Wyrzykowski
Reported 2025-10-16 12:01:08 PDT
[WebGPU Swift] 3 text failures running layout tests http/tests/webgpu/webgpu/api/validation/encoding/cmds/render/dynamic_state.html failed unexpectedly (text diff) http/tests/webgpu/webgpu/api/validation/encoding/queries/resolveQuerySet.html failed unexpectedly (text diff) http/tests/webgpu/webgpu/api/validation/queue/destroyed/query_set.html failed unexpectedly (text diff)
Attachments
Radar WebKit Bug Importer
Comment 1 2025-10-16 12:01:21 PDT
Mike Wyrzykowski
Comment 2 2025-10-17 11:51:19 PDT
EWS
Comment 3 2025-10-17 12:54:16 PDT
Committed 301739@main (ca20a1a521bd): <https://commits.webkit.org/301739@main> Reviewed commits have been landed. Closing PR #52571 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.