[WebGPU Swift] 3 text failures running layout tests https://bugs.webkit.org/show_bug.cgi?id=300914 rdar://162795913

Reviewed by Tadeu Zagallo.

Fix the last of the remaining CTS failures with WebGPU Swift.

This was just a printing format difference. Missing '' and also
we printed 'Optional()' by using String(describing: ) so use
a different mechanism in Swift to avoid that.

Also remove the helper member function which is not needed since the
C++ member function never returns a nil NSString.

* Source/WebGPU/WebGPU/CommandEncoder.h:
(WebGPU::CommandEncoder::getEncoderState):
(WebGPU::CommandEncoder::encoderStateNameWrapper): Deleted.
* Source/WebGPU/WebGPU/CommandEncoder.swift:
(WebGPU.validateFinishError):

Canonical link: https://commits.webkit.org/301739@main